# smart-video-analysis

backend/: .gitignore  pyproject.toml
backend/scripts/: run_app.py
backend/src/sva/: main.py
