[tool.poetry]
name = "smart-video-analysis"
version = "0.0.0"
description = ""
authors = ["paul calot"]

packages = [
    { include = "sva", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
python-dotenv = "*"
tqdm = "*"
pydantic = "*"
fastapi = "*"
uvicorn = "*"

[tool.poetry.group.dev.dependencies]
isort = "*"
black = "*"
pytest = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
